# sqdilities

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
sqdilities/: __init__.py  cli.py  definitions.py  dict.py  ip.py
